--- a/Graph_Coloring/Graph_Coloring.vcxproj
+++ b/Graph_Coloring/Graph_Coloring.vcxproj
@@ -147,12 +147,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AlgGen.h" />
     <ClInclude Include="Generator.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AlgGen.cpp" />
     <ClCompile Include="Generator.cpp" />
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="Graph_Coloring.cpp" />
